--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,6 @@ numpy==1.7.1
 biopython==1.62
 csvkit==0.6.1
 git+ssh://git@github.com/fhcrc/seqmagick.git@master
+git+ssh://git@github.com/fhcrc/taxtastic.git@dev
 git+ssh://git@github.com/nhoffman/bioscons.git@v0.5#egg=bioscons
 git+ssh://git@github.com/nhoffman/bioy.git@v1.4#egg=bioy
