--- a/settings.conf
+++ b/settings.conf
@@ -2,15 +2,16 @@
 
 [input]
 
-datadir = data
+datadir = ../classify/output
 
-rdp = .../rdp_10_31_plus.v1.1
-refpkg =
+rdp = /home/local/AMC/crosenth/working/common/rdp/11_1/output/tax_filter/filtered
+refpkg = /home/local/AMC/crosenth/working/ksmith_jan_02_2014/refpkg/output/mouse_gut_named-1.0.refpkg
 
-seqs = %(datadir)s/seqs.fasta
-seq_info = %(datadir)s/seq_info.csv
+seqs = %(datadir)s/centroids.fasta
+maps = %(datadir)s/maps.csv
+weights = %(datadir)s/weights_3.csv
 labels = %(datadir)s/labels.csv
 
 [output]
 
-transfer_dir =
+transfer_dir = 
