--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 *-env
 *.pyc
+*.zip
+.org-export
+.sconsign
 .sconsign.dblite
-src
 ivmpkg.egg-info
 output*
-.org-export
 report
-*.zip
-.sconsign
+settings.conf
+src
