reverting maps variable name to seq_info

--- a/settings-example.conf
+++ b/settings-example.conf
@@ -8,7 +8,7 @@ rdp = /home/local/AMC/crosenth/working/common/rdp/11_1/output/tax_filter/filtere
 refpkg = /home/local/AMC/crosenth/working/ksmith_jan_02_2014/refpkg/output/mouse_gut_named-1.0.refpkg
 
 seqs = %(datadir)s/centroids.fasta
-maps = %(datadir)s/maps.csv
+seq_info = %(datadir)s/maps.csv
 weights = %(datadir)s/weights_3.csv
 labels = %(datadir)s/labels.csv
 
