--- a/settings-example.conf
+++ b/settings-example.conf
@@ -11,6 +11,7 @@ refpkg =
 
 seqs = %(datadir)s/seqs.fasta
 seq_info = %(datadir)s/seq_info.csv
+weights = 
 labels = %(datadir)s/labels.csv
 
 [output]
