- use updated multiclass_concat_temporary.py with fix for tally error - check output read mass

--- a/settings-example.conf
+++ b/settings-example.conf
@@ -6,8 +6,8 @@ virtualenv =
 
 datadir = data
 
-rdp = .../rdp_10_31_plus.v1.1
-refpkg =
+rdp =
+refpkg = %(datadir)s/urogenital-named-20140403.refpkg
 
 seqs = %(datadir)s/seqs.fasta
 seq_info = %(datadir)s/seq_info.csv
