--- a/settings.conf
+++ b/settings.conf
@@ -1,11 +1,14 @@
 [DEFAULT]
 
+bvdiversity = /shared/silo_researcher/Fredricks_D/bvdiversity
+project = overbaugh
+
 [input]
 
-datadir = data
+datadir = %(bvdiversity)s/combine_projects/output/projects/%(project)s
 
-rdp = .../rdp_10_31_plus.v1.1
-refpkg =
+rdp = /shared/silo_researcher/Matsen_F/MatsenGrp/micro_refset/rdp_plus/rdp_10_31_plus.v1.1
+refpkg = data/urogenital-named-20130610.infernal1.1.refpkg
 
 seqs = %(datadir)s/seqs.fasta
 seq_info = %(datadir)s/seq_info.csv
@@ -13,4 +16,4 @@ labels = %(datadir)s/labels.csv
 
 [output]
 
-transfer_dir =
+transfer_dir = %(bvdiversity)s
