update default settings for fredricks projects

--- a/settings-fredricks.conf
+++ b/settings-fredricks.conf
@@ -1,7 +1,7 @@
 [DEFAULT]
 
 bvdiversity = /shared/silo_researcher/Fredricks_D/bvdiversity
-project = pergam
+project =
 virtualenv =
 
 [input]
@@ -10,8 +10,8 @@ datadir = %(bvdiversity)s/combine_projects/output/projects/%(project)s
 
 refsetdir = /shared/silo_researcher/Matsen_F/MatsenGrp/micro_refset
 rdp = %(refsetdir)s/rdp_plus/rdp_10_31_plus.v1.1
-refpkg = %(refsetdir)s/gut_fredricks/output/gut-pergam-named-20140210.refpkg
-# refpkg = data/urogenital-named-20130610.infernal1.1.refpkg
+
+refpkg = data/urogenital-named-20140403.refpkg
 
 seqs = %(datadir)s/seqs.fasta
 seq_info = %(datadir)s/seq_info.csv
