add weights to fredricks conf

--- a/settings-fredricks.conf
+++ b/settings-fredricks.conf
@@ -16,6 +16,7 @@ refpkg = data/urogenital-named-20140403.refpkg
 seqs = %(datadir)s/seqs.fasta
 seq_info = %(datadir)s/seq_info.csv
 labels = %(datadir)s/labels.csv
+weights =
 
 [output]
 
