--- a/settings.conf
+++ b/settings.conf
@@ -2,18 +2,20 @@
 
 bvdiversity = /shared/silo_researcher/Fredricks_D/bvdiversity
 project = overbaugh
+virtualenv =
 
 [input]
 
 datadir = %(bvdiversity)s/combine_projects/output/projects/%(project)s
 
-rdp = /shared/silo_researcher/Matsen_F/MatsenGrp/micro_refset/rdp_plus/rdp_10_31_plus.v1.1
-refpkg = data/urogenital-named-20130610.infernal1.1.refpkg
+refsetdir = /shared/silo_researcher/Matsen_F/MatsenGrp/micro_refset
+rdp = %(refsetdir)s/rdp_plus/rdp_10_31_plus.v1.1
+refpkg = data/urogenital-named-20140403.refpkg
 
 seqs = %(datadir)s/seqs.fasta
 seq_info = %(datadir)s/seq_info.csv
-weights =
 labels = %(datadir)s/labels.csv
+weights =
 
 [output]
 
