--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-numpy==1.7.1
-biopython==1.62
-csvkit==0.6.1
-git+https://github.com/fhcrc/seqmagick.git@master
-git+https://github.com/fhcrc/taxtastic.git@dev
+numpy==1.8.1
+biopython>=1.62
+csvkit==0.7.2
+seqmagick>=0.5.0
+git+https://github.com/fhcrc/taxtastic.git@v0.5.2#egg=taxtastic
 git+https://github.com/nhoffman/bioscons.git@v0.6#egg=bioscons
-git+https://github.com/nhoffman/bioy.git@v1.4#egg=bioy
+git+https://github.com/nhoffman/bioy.git@v1.7.6#egg=bioy
