--- a/settings.conf
+++ b/settings.conf
@@ -12,7 +12,8 @@ refpkg = ../2014_04_01_mkrefpkg/output/mouse_gut_named-1.0.refpkg
 seqs = %(datadir)s/centroids.fasta
 seq_info = %(datadir)s/maps.csv
 weights = %(datadir)s/weights_3.csv
-labels = %(datadir)s/labels.csv
+# labels = %(datadir)s/labels.csv
+labels = ../data/exp1and3.csv
 
 [output]
 
