use new gut refset

--- a/settings.conf
+++ b/settings.conf
@@ -6,13 +6,12 @@ virtualenv =
 
 [input]
 
-datadir = %(bvdiversity)s/combine_projects/output/projects/%(project)s
+rdp =
 
 refsetdir = /shared/silo_researcher/Matsen_F/MatsenGrp/micro_refset
-rdp = %(refsetdir)s/rdp_plus/rdp_10_31_plus.v1.1
+refpkg = %(refsetdir)s/gut_pergam/output/gut-pergam_named-20140626.refpkg
 
-refpkg = data/urogenital-named-20140403.refpkg
-
+datadir = %(bvdiversity)s/combine_projects/output/projects/%(project)s
 seqs = %(datadir)s/seqs.fasta
 seq_info = %(datadir)s/seq_info.csv
 labels = %(datadir)s/labels.csv
