add mechanism for running unnamed refset

--- a/settings-unnamed.conf
+++ b/settings-unnamed.conf
@@ -2,14 +2,14 @@
 
 virtualenv = ../ion_cfstudy-env
 use_cluster =
-named = true
+named = false
 
 [input]
 
 datadir = ../ion_pipeline/output
 
 rdp = /home/molmicro/common/rdp/11_2/output/tax_filter/filtered
-refpkg = ../mkrefpkg/output/cf_study_named-2.0.refpkg
+refpkg = ../mkrefpkg/output-unnamed/cf_study_unnamed-2.0.refpkg
 
 seqs = %(datadir)s/denoised.fasta
 seq_info = %(datadir)s/maps.csv
@@ -18,5 +18,5 @@ weights = %(datadir)s/weights_3.csv
 
 [output]
 
-outdir = output
+outdir = output-unnamed
 transfer_dir =
