incorporate usearch of centroids

--- a/settings-example.conf
+++ b/settings-example.conf
@@ -1,16 +1,21 @@
 [DEFAULT]
 
 virtualenv =
-
-use_cluster = 
+use_cluster =
 
 [input]
 
 datadir = data
-
-rdp =
 refpkg = %(datadir)s/urogenital-named-20140403.refpkg
 
+# 16S database for blast/usearch of centroids
+refs =
+ref_blast = %(refs)s/blast
+ref_seqs = %(refs)s/seqs.fasta
+ref_info = %(refs)s/seq_info.csv
+ref_taxonomy = %(refs)s/taxonomy.csv
+
+# experimental data
 seqs = %(datadir)s/seqs.fasta
 seq_info = %(datadir)s/seq_info.csv
 weights =
