--- a/settings.conf
+++ b/settings.conf
@@ -3,7 +3,7 @@
 bvdiversity = /fh/fast/fredricks_d/bvdiversity
 project = metabolome
 virtualenv =
-use_cluster =
+use_cluster = true
 
 [input]
 
@@ -19,7 +19,7 @@ ref_info = %(refs)s/seq_info.csv
 ref_taxonomy = %(refs)s/taxonomy.csv
 
 # experimental data
-datadir = %(bvdiversity)s/combine_projects/output/projects/%(project)s
+datadir = metabolome_data
 seqs = %(datadir)s/seqs.fasta
 seq_info = %(datadir)s/seq_info.csv
 labels = %(datadir)s/labels.csv
