--- a/settings.conf
+++ b/settings.conf
@@ -3,14 +3,21 @@
 bvdiversity = /fh/fast/fredricks_d/bvdiversity
 project = pergam
 virtualenv =
+use_cluster = no
 
 [input]
-
-rdp =
 
 refsetdir = /shared/silo_researcher/Matsen_F/MatsenGrp/micro_refset
 refpkg = %(refsetdir)s/gut_pergam/output/gut-pergam_named-20140626.refpkg
 
+# 16S database for blast/usearch of centroids
+refs = %(refsetdir)s/rdp_plus/rdp_10_31_plus.v1.1
+ref_blast = %(refs)s/blast
+ref_seqs = %(refs)s/seqs.fasta
+ref_info = %(refs)s/seq_info.csv
+ref_taxonomy = %(refs)s/taxonomy.csv
+
+# experimental data
 datadir = %(bvdiversity)s/combine_projects/output/projects/%(project)s
 seqs = %(datadir)s/seqs.fasta
 seq_info = %(datadir)s/seq_info.csv
@@ -19,4 +26,4 @@ weights =
 
 [output]
 
-transfer_dir = %(bvdiversity)s
+outdir = output
