expanded data set all deduplication uses swarm, with option to perform strict dereplication only remove bootstrap and build_wheels (replaced by build_env.sh)

--- a/settings-example.conf
+++ b/settings-example.conf
@@ -3,12 +3,19 @@
 virtualenv =
 use_cluster =
 
+[swarm]
+
+# parameter for swarm -d/--differences
+differences = 1
+# drop OTUs with mass < min_mass
+min_mass = 2
+
 [input]
 
 datadir = data
 refpkg = %(datadir)s/urogenital-named-20140403.refpkg
 
-# 16S database for blast/usearch of centroids
+# 16S database for blast/vsearch of centroids
 refs =
 ref_blast = %(refs)s/blast
 ref_seqs = %(refs)s/seqs.fasta
