--- a/settings-fredricks.conf
+++ b/settings-fredricks.conf
@@ -5,14 +5,20 @@ project =
 virtualenv =
 use_cluster =
 
-[input]
+[swarm]
 
-refsetdir = /shared/silo_researcher/Matsen_F/MatsenGrp/micro_refset
+# parameter for swarm -d/--differences
+differences = 1
+# drop OTUs with mass < min_mass
+min_mass = 2
+
+[input]
 
 refpkg = data/urogenital-named-20140403.refpkg
 
 # 16S database for blast/usearch of centroids
-refs = %(refsetdir)s/rdp_plus/rdp_10_31_plus.v1.1
+refsetdir = /shared/silo_researcher/Matsen_F/MatsenGrp/micro_refset
+refs = %(refsetdir)s/rdp_plus/rdp_11_4_plus.v1.0
 ref_blast = %(refs)s/blast
 ref_seqs = %(refs)s/seqs.fasta
 ref_info = %(refs)s/seq_info.csv
