get_hits makes alignments and trees
- include test ref seqs, into, and taxonomy

--- a/settings-example.conf
+++ b/settings-example.conf
@@ -15,9 +15,8 @@ min_mass = 2
 datadir = data
 refpkg = %(datadir)s/urogenital-named-20140403.refpkg
 
-# 16S database for blast/vsearch of centroids
-refs =
-ref_blast = %(refs)s/blast
+# 16S database for vsearch of centroids
+refs = %(datadir)s/refs
 ref_seqs = %(refs)s/seqs.fasta
 ref_info = %(refs)s/seq_info.csv
 ref_taxonomy = %(refs)s/taxonomy.csv
