--- a/settings.conf
+++ b/settings.conf
@@ -3,16 +3,22 @@
 bvdiversity = /fh/fast/fredricks_d/bvdiversity
 project = semen
 virtualenv =
-use_cluster = true
+use_cluster =
+
+[swarm]
+
+# parameter for swarm -d/--differences
+differences = 1
+# drop OTUs with mass < min_mass
+min_mass = 2
 
 [input]
-
-refsetdir = /shared/silo_researcher/Matsen_F/MatsenGrp/micro_refset
 
 refpkg = data/urogenital-named-20140403.refpkg
 
 # 16S database for blast/usearch of centroids
-refs = %(refsetdir)s/rdp_plus/rdp_10_31_plus.v1.1
+refsetdir = /shared/silo_researcher/Matsen_F/MatsenGrp/micro_refset
+refs = %(refsetdir)s/rdp_plus/rdp_11_4_plus.v1.0
 ref_blast = %(refs)s/blast
 ref_seqs = %(refs)s/seqs.fasta
 ref_info = %(refs)s/seq_info.csv
@@ -27,4 +33,4 @@ weights =
 
 [output]
 
-transfer_dir = %(bvdiversity)s
+outdir = output
