--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-numpy==1.9.3
-biopython==1.65
-csvkit==0.9.1
-seqmagick==0.6.1
-bioscons==0.8.1
-taxtastic==0.5.4
+numpy
+biopython
+scons>=2.4.1
+csvkit>=0.9.1
+seqmagick>=0.6.1
+bioscons>=0.8.1
+taxtastic>=0.5.4
 git+https://github.com/nhoffman/bioy.git@v1.9#egg=bioy
-git+https://github.com/nhoffman/swarmwrapper.git@0.2.0#egg=swarmwrapper
+git+https://github.com/nhoffman/swarmwrapper.git
