--- a/settings-fredricks.conf
+++ b/settings-fredricks.conf
@@ -14,7 +14,10 @@ min_mass = 2
 
 [input]
 
+# "vaginal full-length"
 refpkg = data/urogenital-named-20140403.refpkg
+# created for msflash
+# refpkg = data/urogenital_named-2015-10-29.refpkg
 
 # 16S database for blast/usearch of centroids
 refsetdir = /shared/silo_researcher/Matsen_F/MatsenGrp/micro_refset
