uses msflash refset

--- a/settings.conf
+++ b/settings.conf
@@ -1,7 +1,7 @@
 [DEFAULT]
 
 bvdiversity = /fh/fast/fredricks_d/bvdiversity
-project = ppt
+project = PPT
 virtualenv =
 use_cluster =
 
@@ -15,9 +15,9 @@ min_mass = 2
 [input]
 
 # "vaginal full-length"
-refpkg = data/urogenital-named-20140403.refpkg
+# refpkg = data/urogenital-named-20140403.refpkg
 # created for msflash
-# refpkg = data/urogenital_named-2015-10-29.refpkg
+refpkg = data/urogenital_named-2015-10-29.refpkg
 
 # 16S database for blast/usearch of centroids
 refsetdir = /shared/silo_researcher/Matsen_F/MatsenGrp/micro_refset
@@ -28,11 +28,12 @@ ref_info = %(refs)s/seq_info.csv
 ref_taxonomy = %(refs)s/taxonomy.csv
 
 # experimental data
-datadir = %(bvdiversity)s/combine_projects/output/projects/%(project)s
-seqs = %(datadir)s/seqs.fasta
-seq_info = %(datadir)s/seq_info.csv
-labels = %(datadir)s/labels.csv
-weights =
+datadir = %(bvdiversity)s/data/miseq-project-%(project)s
+seqs = %(datadir)s/otu_reps.fasta.gz
+seq_info = %(datadir)s/specimen_map.csv
+# labels = %(datadir)s/labels.csv
+labels =
+weights = %(datadir)s/weights.csv
 
 [output]
 
