--- a/settings.conf
+++ b/settings.conf
@@ -31,8 +31,7 @@ ref_taxonomy = %(refs)s/taxonomy.csv
 datadir = %(bvdiversity)s/data/miseq-project-%(project)s
 seqs = %(datadir)s/otu_reps.fasta.gz
 seq_info = %(datadir)s/specimen_map.csv
-# labels = %(datadir)s/labels.csv
-labels =
+labels = %(datadir)s/sample_info.csv
 weights = %(datadir)s/weights.csv
 
 [output]
