--- a/settings.conf
+++ b/settings.conf
@@ -18,6 +18,7 @@ min_mass = 2
 # refpkg = data/urogenital-named-20140403.refpkg
 # created for msflash
 refpkg = data/urogenital_named-2015-10-29.refpkg
+censored = data/censored.txt
 
 # 16S database for blast/usearch of centroids
 refsetdir = /shared/silo_researcher/Matsen_F/MatsenGrp/micro_refset
