diabetes specific data files

--- a/settings.conf
+++ b/settings.conf
@@ -21,9 +21,9 @@ ref_info = %(refs)s/seq_info.csv
 ref_taxonomy = %(refs)s/taxonomy.csv
 
 # experimental data
-datadir = ../2016-05-16_kelsmith_data_prep/output
-seqs = %(datadir)s/seeds.fasta
-seq_info = %(datadir)s/specimen_map.csv
+datadir = ../2016-05-16_kelsmith_data_prep/output/salmonella
+seqs = %(datadir)s/seqs.fasta
+seq_info = %(datadir)s/map.csv
 weights = %(datadir)s/weights.csv
 # labels = %(datadir)s/labels.csv
 labels =
