first pass PCA plots

--- a/settings.conf
+++ b/settings.conf
@@ -25,8 +25,7 @@ datadir = ../2016-05-16_kelsmith_data_prep/output/salmonella
 seqs = %(datadir)s/seqs.fasta
 seq_info = %(datadir)s/map.csv
 weights = %(datadir)s/weights.csv
-# labels = %(datadir)s/labels.csv
-labels =
+labels = %(datadir)s/labels.csv
 
 [output]
 
