--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,35 @@
-numpy
-biopython
-scons>=2.4.1
-csvkit>=0.9.1
-seqmagick>=0.6.1
-bioscons>=0.8.1
-taxtastic>=0.5.4
+# this file is order-dependent! see bin/pipdeptree2requirements.py
+
+# to add new dependencies:
+# - create a virtualenv
+# - install one or more packages
+# - install pipdeptree
+# - run `pipdeptree -f | bin/pipdeptree2requirements.py` to generate a
+#   new requirements.txt
+# - manually replace any references to github repos
+
+six==1.10.0
+cycler==0.10.0
+jdcal==1.2
+numpy==1.11.0
+pyparsing==2.1.5
+python-dateutil==2.5.3
+pytz==2016.4
+SQLAlchemy==1.0.13
+biopython==1.67
+dbf==0.94.3
+decorator==4.0.10
+matplotlib==1.5.1
+openpyxl==2.2.0b1
+pandas==0.18.1
+xlrd==1.0.0
+scons==2.5.0
+bioscons==0.8.1
+csvkit==0.9.1
+seqmagick==0.6.1
+taxtastic==0.5.4
+wheel==0.29.0
+wsgiref==0.1.2
 git+https://github.com/nhoffman/bioy.git@v1.9#egg=bioy
 git+https://github.com/nhoffman/swarmwrapper.git
+
