--- a/settings.conf
+++ b/settings.conf
@@ -17,14 +17,13 @@ min_mass = 2
 datadir = %(bvdiversity)s/combine_projects/output/projects/%(project)s
 
 refsetdir = /shared/silo_researcher/Matsen_F/MatsenGrp/micro_refset
-refs = %(refsetdir)s/rdp_plus/rdp_11_4_plus.v1.0
+refs = %(refsetdir)s/rdp_plus/rdp_11_4_plus.v1.1
 ref_blast = %(refs)s/blast
 ref_seqs = %(refs)s/seqs.fasta
 ref_info = %(refs)s/seq_info.csv
 ref_taxonomy = %(refs)s/taxonomy.csv
 
-# refpkg = data/urogenital_named-2015-08-24.refpkg
-refpkg = %(bvdiversity)s/working/nhoffman/2015-10-29-reclassify-isolates/output/urogenital_named-2015-10-29.refpkg
+refpkg = data/urogenital_named-2015-10-29.refpkg
 
 # experimental data
 seqs = %(datadir)s/seqs.fasta
