--- a/settings.conf
+++ b/settings.conf
@@ -14,25 +14,23 @@ min_mass = 2
 
 [input]
 
-# "vaginal full-length"
-refpkg = data/urogenital-named-20140403.refpkg
-# created for msflash
-# refpkg = data/urogenital_named-2015-10-29.refpkg
+refpkg = data/manhart_named-2016-08-11.refpkg
 
 # 16S database for blast/usearch of centroids
 refsetdir = /shared/silo_researcher/Matsen_F/MatsenGrp/micro_refset
-refs = %(refsetdir)s/rdp_plus/rdp_11_4_plus.v1.1
+refs = %(refsetdir)s/rdp_plus/rdp_11_4_plus.v1.2
 ref_blast = %(refs)s/blast
 ref_seqs = %(refs)s/seqs.fasta
 ref_info = %(refs)s/seq_info.csv
 ref_taxonomy = %(refs)s/taxonomy.csv
 
 # experimental data
-datadir = %(bvdiversity)s/combine_projects/output/projects/%(project)s
-seqs = %(datadir)s/seqs.fasta
-seq_info = %(datadir)s/seq_info.csv
-labels = %(datadir)s/labels.csv
-weights =
+# datadir = %(bvdiversity)s/combine_projects/output/projects/%(project)s
+datadir = %(bvdiversity)s/data/miseq-plate-12/processed
+seqs = %(datadir)s/otu_reps.fasta
+seq_info = %(datadir)s/specimen_map_concat.csv
+labels = %(datadir)s/sample_info.csv
+weights = %(datadir)s/weights.csv
 
 [output]
 
