use dada2 output

--- a/settings.conf
+++ b/settings.conf
@@ -26,9 +26,9 @@ ref_taxonomy = %(refs)s/taxonomy.csv
 
 # experimental data
 # datadir = %(bvdiversity)s/combine_projects/output/projects/%(project)s
-datadir = %(bvdiversity)s/data/miseq-plate-12-0mm/processed
-seqs = %(datadir)s/otu_reps.fasta
-seq_info = %(datadir)s/specimen_map_concat.csv
+datadir = %(bvdiversity)s/data/miseq-plate-12-0mm/dada2
+seqs = %(datadir)s/seeds.fasta
+seq_info = %(datadir)s/specimen_map.csv
 labels = %(datadir)s/sample_info.csv
 weights = %(datadir)s/weights.csv
 
