censor presumed environmental organisms

--- a/settings.conf
+++ b/settings.conf
@@ -31,6 +31,7 @@ seqs = %(datadir)s/seeds.fasta
 seq_info = %(datadir)s/specimen_map.csv
 labels = %(datadir)s/sample_info.csv
 weights = %(datadir)s/weights.csv
+censored = data/censored.txt
 
 [output]
 
