another round of censoring environmental reads

--- a/settings.conf
+++ b/settings.conf
@@ -31,7 +31,7 @@ seqs = %(datadir)s/seeds.fasta
 seq_info = %(datadir)s/specimen_map.csv
 labels = %(datadir)s/sample_info.csv
 weights = %(datadir)s/weights.csv
-censored = data/censored.txt
+censored = data/censored/censored-2016-10-24.txt
 
 [output]
 
