--- a/settings.conf
+++ b/settings.conf
@@ -14,7 +14,8 @@ min_mass = 2
 
 [input]
 
-refpkg = %(bvdiversity)s/2016-11-03-hvtn602-plate17-refpkg/output/hvtn602-2011-11-10/hvtn602-2011-11-10_named-1.0.refpkg
+# refpkg = %(bvdiversity)s/2016-11-03-hvtn602-plate17-refpkg/output/hvtn602-2011-11-10/hvtn602-2011-11-10_named-1.0.refpkg
+refpkg = %(bvdiversity)s/2016-11-03-hvtn602-plate17-refpkg/output/hvtn602-2017-01-11/hvtn602-2017-01-11_named-1.0.refpkg
 
 # 16S database for blast/usearch of centroids
 refs = /fh/fast/fredricks_d/bvdiversity/refsets/mkrefpkg-ncbi/output-ncbi/release/filtered
