dada2 and urogenital_named-2015-10-29.refpkg settings

--- a/settings.conf
+++ b/settings.conf
@@ -1,7 +1,7 @@
 [DEFAULT]
 
 bvdiversity = /fh/fast/fredricks_d/bvdiversity
-project = 2017-05-12-project-plate-26
+project = project-plate-26
 virtualenv =
 use_cluster =
 
@@ -14,10 +14,7 @@ min_mass = 2
 
 [input]
 
-# "vaginal full-length"
-refpkg = data/urogenital-named-20140403.refpkg
-# created for msflash
-# refpkg = data/urogenital_named-2015-10-29.refpkg
+refpkg = data/urogenital_named-2015-10-29.refpkg
 
 # 16S database for blast/usearch of centroids
 refsetdir = /shared/silo_researcher/Matsen_F/MatsenGrp/micro_refset
@@ -28,11 +25,11 @@ ref_info = %(refs)s/seq_info.csv
 ref_taxonomy = %(refs)s/taxonomy.csv
 
 # experimental data
-datadir = %(bvdiversity)s/combine_projects/output/projects/%(project)s
+datadir = %(bvdiversity)s/data/miseq-plate-26/dada2
 seqs = %(datadir)s/seqs.fasta
-seq_info = %(datadir)s/seq_info.csv
-labels = %(datadir)s/labels.csv
-weights =
+seq_info = %(datadir)s/specimen_map.csv
+labels = %(datadir)s/sample_info.csv
+weights = %(datadir)s/weights.csv
 
 [output]
 
