--- a/settings.conf
+++ b/settings.conf
@@ -14,12 +14,11 @@ min_mass = 2
 
 [input]
 
-refpkg = data/urogenital_named-2015-10-29.refpkg
+refpkg = data/urogenital-2017-03-30_named-1.0.refpkg
 
 # 16S database for blast/usearch of centroids
-refsetdir = /shared/silo_researcher/Matsen_F/MatsenGrp/micro_refset
-refs = %(refsetdir)s/rdp_plus/rdp_11_4_plus.v1.2
-ref_blast = %(refs)s/blast
+refs = /fh/fast/fredricks_d/bvdiversity/ncbi-plus/output-2017-03-30
+ref_blast = %(refs)s/ncbi_plus
 ref_seqs = %(refs)s/seqs.fasta
 ref_info = %(refs)s/seq_info.csv
 ref_taxonomy = %(refs)s/taxonomy.csv
