pointing to the latest vaginal refset and ncbi-plus blast database

--- a/settings.conf
+++ b/settings.conf
@@ -14,24 +14,21 @@ min_mass = 2
 
 [input]
 
-refpkg = data/urogenital-named-20140403.refpkg
+refpkg = /fh/fast/fredricks_d/bvdiversity/2017-03-30-vaginal-refset-ncbi-plus/output/urogenital-2017-03-30/urogenital-2017-03-30_named-1.0.refpkg/
 
 # 16S database for blast/usearch of centroids
-refsetdir = /shared/silo_researcher/Matsen_F/MatsenGrp/micro_refset
-refs = %(refsetdir)s/rdp_plus/rdp_11_4_plus.v1.2
-ref_blast = %(refs)s/blast
+refs = /fh/fast/fredricks_d/bvdiversity/ncbi-plus/output-2017-03-30
+ref_blast = %(refs)s/ncbi_plus
 ref_seqs = %(refs)s/seqs.fasta
 ref_info = %(refs)s/seq_info.csv
 ref_taxonomy = %(refs)s/taxonomy.csv
 
 # experimental data
-# datadir = %(bvdiversity)s/combine_projects/output/projects/%(project)s
 datadir = %(bvdiversity)s/data/miseq-plate-14-0mm/dada2
 seqs = %(datadir)s/seeds.fasta
 seq_info = %(datadir)s/specimen_map.csv
 labels = %(datadir)s/sample_info.csv
 weights = %(datadir)s/weights.csv
-censored =
 
 [output]
 
