--- a/settings.conf
+++ b/settings.conf
@@ -18,7 +18,7 @@ refpkg = /fh/fast/fredricks_d/bvdiversity/2017-03-30-vaginal-refset-ncbi-plus/ou
 
 # 16S database for blast/usearch of centroids
 refs = /fh/fast/fredricks_d/bvdiversity/ncbi-plus/output-2017-03-30
-ref_blast = %(refs)s/ncbi_plus
+ref_blast = %(refs)s/ncbi_plus/blastn
 ref_seqs = %(refs)s/seqs.fasta
 ref_info = %(refs)s/seq_info.csv
 ref_taxonomy = %(refs)s/taxonomy.csv
