barcodecop comparison with plate31

--- a/settings.conf
+++ b/settings.conf
@@ -1,7 +1,7 @@
 [DEFAULT]
 
 bvdiversity = /fh/fast/fredricks_d/bvdiversity
-project = project-plate-26
+project = miseq-plate-14
 virtualenv =
 use_cluster =
 
@@ -14,11 +14,11 @@ min_mass = 2
 
 [input]
 
-refpkg = data/urogenital-2017-03-30_named-1.0.refpkg
+refpkg = /fh/fast/fredricks_d/bvdiversity/2017-03-30-vaginal-refset-ncbi-plus/output/urogenital-2017-03-30/urogenital-2017-03-30_named-1.0.refpkg/
 
 # 16S database for blast/usearch of centroids
 refs = /fh/fast/fredricks_d/bvdiversity/ncbi-plus/output-2017-03-30
-ref_blast = %(refs)s/ncbi_plus
+ref_blast = %(refs)s/ncbi_plus/blastn
 ref_seqs = %(refs)s/seqs.fasta
 ref_info = %(refs)s/seq_info.csv
 ref_taxonomy = %(refs)s/taxonomy.csv
