--- a/settings-fredricks.conf
+++ b/settings-fredricks.conf
@@ -5,34 +5,23 @@ project =
 virtualenv =
 use_cluster =
 
-[swarm]
-
-# parameter for swarm -d/--differences
-differences = 1
-# drop OTUs with mass < min_mass
-min_mass = 2
-
 [input]
 
-# "vaginal full-length"
-refpkg = data/urogenital-named-20140403.refpkg
-# created for msflash
-# refpkg = data/urogenital_named-2015-10-29.refpkg
+refpkg = data/urogenital_named-2015-10-29.refpkg
 
 # 16S database for blast/usearch of centroids
-refsetdir = /shared/silo_researcher/Matsen_F/MatsenGrp/micro_refset
-refs = %(refsetdir)s/rdp_plus/rdp_11_4_plus.v1.2
-ref_blast = %(refs)s/blast
+refs = /fh/fast/fredricks_d/bvdiversity/ncbi-plus/output-2017-08-03
+ref_blast = %(refs)s/ncbi_plus
 ref_seqs = %(refs)s/seqs.fasta
 ref_info = %(refs)s/seq_info.csv
 ref_taxonomy = %(refs)s/taxonomy.csv
 
 # experimental data
-datadir = %(bvdiversity)s/combine_projects/output/projects/%(project)s
+datadir = %(bvdiversity)s/data/miseq-%(project)s/dada2
 seqs = %(datadir)s/seqs.fasta
-seq_info = %(datadir)s/seq_info.csv
-labels = %(datadir)s/labels.csv
-weights =
+seq_info = %(datadir)s/specimen_map.csv
+labels = %(datadir)s/sample_info.csv
+weights = %(datadir)s/weights.csv
 
 [output]
 
