remove non-16s SVs

--- a/settings.conf
+++ b/settings.conf
@@ -30,6 +30,10 @@ seq_info = %(datadir)s/specimen_map.csv
 labels = %(datadir)s/sample_info.csv
 weights = %(datadir)s/weights.csv
 
+# add a line for each source of censored SV names
+censored =
+    %(datadir)s/not_16s.txt
+
 [output]
 
 outdir = output
