--- a/settings.conf
+++ b/settings.conf
@@ -1,7 +1,6 @@
 [DEFAULT]
 
 bvdiversity = /fh/fast/fredricks_d/bvdiversity
-project = miseq-plate-14
 virtualenv =
 use_cluster =
 
@@ -14,11 +13,11 @@ min_mass = 2
 
 [input]
 
-refpkg = /fh/fast/fredricks_d/bvdiversity/2017-03-30-vaginal-refset-ncbi-plus/output/urogenital-2017-03-30/urogenital-2017-03-30_named-1.0.refpkg/
+refpkg = %(bvdiversity)s/2017-07-03-vaginal-refset-ncbi-plus/output/urogenital-2017-08-03/urogenital-2017-08-03_named-1.0.refpkg
 
 # 16S database for blast/usearch of centroids
-refs = /fh/fast/fredricks_d/bvdiversity/ncbi-plus/output-2017-03-30
-ref_blast = %(refs)s/ncbi_plus/blastn
+refs = %(bvdiversity)s/ncbi-plus/output-2017-08-03
+ref_blast = %(refs)s/ncbi_plus
 ref_seqs = %(refs)s/seqs.fasta
 ref_info = %(refs)s/seq_info.csv
 ref_taxonomy = %(refs)s/taxonomy.csv
