replace multiclass_concat.py with bin/get_classifications.py
- don't modify database after guppy classify

--- a/settings-example.conf
+++ b/settings-example.conf
@@ -16,9 +16,16 @@ ref_taxonomy = %(refs)s/taxonomy.csv
 
 # experimental data
 seqs = %(datadir)s/seqs.fasta
-seq_info = %(datadir)s/seq_info.csv
-weights =
-labels = %(datadir)s/labels.csv
+specimen_map = %(datadir)s/specimen_map.csv
+weights = %(datadir)s/weights.csv
+labels =
+
+[singularity]
+
+singularity = /app/singularity/2.3.1.1/bin/singularity
+
+_images = /fh/fast/fredricks_d/bvdiversity/singularity
+deenurp = %(_images)s/deenurp-v0.2.1-singularity2.3.img
 
 [output]
 
