--- a/settings-example.conf
+++ b/settings-example.conf
@@ -26,6 +26,7 @@ singularity = /app/singularity/2.3.1.1/bin/singularity
 
 _images = /fh/fast/fredricks_d/bvdiversity/singularity
 deenurp = %(_images)s/deenurp-v0.2.1-singularity2.3.img
+dada2 = %(_images)s/dada2-1.4.1c.img
 
 [output]
 
