start on updated process to replace get_hits

--- a/settings-example.conf
+++ b/settings-example.conf
@@ -8,17 +8,20 @@ use_cluster =
 datadir = data
 refpkg = %(datadir)s/urogenital-named-20140403.refpkg
 
-# 16S database for vsearch of centroids
-refs = %(datadir)s/refs
-ref_seqs = %(refs)s/seqs.fasta
-ref_info = %(refs)s/seq_info.csv
-ref_taxonomy = %(refs)s/taxonomy.csv
-
 # experimental data
 seqs = %(datadir)s/seqs.fasta
 specimen_map = %(datadir)s/specimen_map.csv
 weights = %(datadir)s/weights.csv
 labels =
+
+[refs]
+
+# 16S database for vsearch of centroids
+
+refs = data/refs
+ref_seqs = %(refs)s/seqs.fasta
+ref_info = %(refs)s/seq_info.csv
+ref_taxonomy = %(refs)s/taxonomy.csv
 
 [singularity]
 
