use ncbi-plus in example for SConstruct-get-details

--- a/settings-example.conf
+++ b/settings-example.conf
@@ -18,7 +18,8 @@ labels =
 
 # 16S database for vsearch of centroids
 
-refs = data/refs
+refs = /fh/fast/fredricks_d/bvdiversity/ncbi-plus/output-2017-10-23
+# refs = data/refs
 ref_seqs = %(refs)s/seqs.fasta
 ref_info = %(refs)s/seq_info.csv
 ref_taxonomy = %(refs)s/taxonomy.csv
@@ -34,3 +35,7 @@ dada2 = %(_images)s/dada2-1.4.1c.img
 [output]
 
 outdir = output
+
+[details]
+
+outdir = output-details
