get reads using SConstruct-get-data

--- a/settings-example.conf
+++ b/settings-example.conf
@@ -3,6 +3,26 @@
 virtualenv =
 use_cluster =
 
+[singularity]
+
+singularity = /app/singularity/2.3.1.1/bin/singularity
+
+_images = /fh/fast/fredricks_d/bvdiversity/singularity
+deenurp = %(_images)s/deenurp-v0.2.3-singularity2.3.img
+dada2 = %(_images)s/dada2-1.4.1c.img
+
+[get_data]
+# used by SConstruct-get-data
+
+outdir = dada2
+
+# Required; one value per line.
+# ie, /fh/fast/fredricks_d/bvdiversity/data/{plate}/dada2/sample_info.csv
+plates:
+
+# Optional; one value per line
+projects:
+
 [input]
 
 datadir = data
@@ -23,14 +43,6 @@ refs = /fh/fast/fredricks_d/bvdiversity/ncbi-plus/output-2017-10-23
 ref_seqs = %(refs)s/seqs.fasta
 ref_info = %(refs)s/seq_info.csv
 ref_taxonomy = %(refs)s/taxonomy.csv
-
-[singularity]
-
-singularity = /app/singularity/2.3.1.1/bin/singularity
-
-_images = /fh/fast/fredricks_d/bvdiversity/singularity
-deenurp = %(_images)s/deenurp-v0.2.3-singularity2.3.img
-dada2 = %(_images)s/dada2-1.4.1c.img
 
 [output]
 
