--- a/settings-example.conf
+++ b/settings-example.conf
@@ -2,12 +2,13 @@
 
 virtualenv =
 use_cluster =
+bvdiversity = /fh/fast/fredricks_d/bvdiversity
 
 [singularity]
 
 singularity = /app/singularity/2.3.1.1/bin/singularity
 
-_images = /fh/fast/fredricks_d/bvdiversity/singularity
+_images = %(bvdiversity)s/singularity
 deenurp = %(_images)s/deenurp-v0.2.3-singularity2.3.img
 dada2 = %(_images)s/dada2-1.4.1c.img
 
@@ -25,10 +26,12 @@ projects:
 
 [input]
 
-datadir = data
-refpkg = %(datadir)s/urogenital-named-20140403.refpkg
+# assumes SConstruct-get-data as been run
+
+refpkg = urogenital-2017-10-23_named-1.0.refpkg
 
 # experimental data
+datadir = dada2
 seqs = %(datadir)s/seqs.fasta
 specimen_map = %(datadir)s/specimen_map.csv
 weights = %(datadir)s/weights.csv
