use full path to refpkg in settings

--- a/settings-example.conf
+++ b/settings-example.conf
@@ -24,10 +24,12 @@ plates:
 # Optional; one value per line
 projects:
 
+# SConstruct-get-data makes a local copy of this refpkg
+refpkg = %(bvdiversity)s/2017-07-03-vaginal-refset-ncbi-plus/output/urogenital-2017-10-23/urogenital-2017-10-23_named-1.0.refpkg
+
 [input]
 
 # assumes SConstruct-get-data as been run
-
 refpkg = urogenital-2017-10-23_named-1.0.refpkg
 
 # experimental data
@@ -41,7 +43,7 @@ labels =
 
 # 16S database for vsearch of centroids
 
-refs = /fh/fast/fredricks_d/bvdiversity/ncbi-plus/output-2017-10-23
+refs = %(bvdiversity)s/ncbi-plus/output-2017-10-23
 # refs = data/refs
 ref_seqs = %(refs)s/seqs.fasta
 ref_info = %(refs)s/seq_info.csv
