--- a/settings-example.conf
+++ b/settings-example.conf
@@ -4,18 +4,26 @@ virtualenv =
 use_cluster =
 bvdiversity = /fh/fast/fredricks_d/bvdiversity
 
+datadir =
+refdir = %(bvdiversity)s/ncbi-plus/output-2017-10-23
+
 [singularity]
 
-singularity = /app/singularity/2.3.1.1/bin/singularity
+singularity = /app/easybuild/software/Singularity/2.4.2-GCC-5.4.0-2.26/bin/singularity
 
 _images = %(bvdiversity)s/singularity
-deenurp = %(_images)s/deenurp-v0.2.3-singularity2.3.img
+deenurp = %(_images)s/deenurp-v0.2.4-singularity2.4.img
 dada2 = %(_images)s/dada2-1.4.1c.img
+
+# one path per line
+binds:
+	%(datadir)s
+	%(refdir)s
 
 [get_data]
 # used by SConstruct-get-data
 
-outdir = dada2
+outdir = input
 
 # Required; one value per line.
 # ie, /fh/fast/fredricks_d/bvdiversity/data/{plate}/dada2/sample_info.csv
@@ -33,7 +41,6 @@ refpkg = %(bvdiversity)s/2017-07-03-vaginal-refset-ncbi-plus/output/urogenital-2
 refpkg = urogenital-2017-10-23_named-1.0.refpkg
 
 # experimental data
-datadir = dada2
 seqs = %(datadir)s/seqs.fasta
 specimen_map = %(datadir)s/specimen_map.csv
 weights = %(datadir)s/weights.csv
@@ -43,11 +50,10 @@ labels =
 
 # 16S database for vsearch of centroids
 
-refs = %(bvdiversity)s/ncbi-plus/output-2017-10-23
 # refs = data/refs
-ref_seqs = %(refs)s/seqs.fasta
-ref_info = %(refs)s/seq_info.csv
-ref_taxonomy = %(refs)s/taxonomy.csv
+ref_seqs = %(refdir)s/seqs.fasta
+ref_info = %(refdir)s/seq_info.csv
+ref_taxonomy = %(refdir)s/taxonomy.csv
 
 [output]
 
