setting-example reflects hutch setup

--- a/settings-example.conf
+++ b/settings-example.conf
@@ -4,20 +4,19 @@ virtualenv =
 use_cluster =
 bvdiversity = /fh/fast/fredricks_d/bvdiversity
 
-datadir =
 refdir = %(bvdiversity)s/ncbi-plus/output-2017-10-23
 
 [singularity]
 
-singularity = /app/easybuild/software/Singularity/2.4.2-GCC-5.4.0-2.26/bin/singularity
+singularity = /app/singularity/2.3.1.1/bin/singularity
+# singularity = /app/easybuild/software/Singularity/2.4.2-GCC-5.4.0-2.26/bin/singularity
 
 _images = %(bvdiversity)s/singularity
-deenurp = %(_images)s/deenurp-v0.2.4-singularity2.4.img
+deenurp = %(_images)s/deenurp-v0.2.3-singularity2.3.img
 dada2 = %(_images)s/dada2-1.4.1c.img
 
 # one path per line
 binds:
-	%(datadir)s
 	%(refdir)s
 
 [get_data]
@@ -28,6 +27,7 @@ outdir = input
 # Required; one value per line.
 # ie, /fh/fast/fredricks_d/bvdiversity/data/{plate}/dada2/sample_info.csv
 plates:
+	miseq-plate-14
 
 # Optional; one value per line
 projects:
@@ -41,10 +41,13 @@ refpkg = %(bvdiversity)s/2017-07-03-vaginal-refset-ncbi-plus/output/urogenital-2
 refpkg = urogenital-2017-10-23_named-1.0.refpkg
 
 # experimental data
+datadir = input
 seqs = %(datadir)s/seqs.fasta
 specimen_map = %(datadir)s/specimen_map.csv
 weights = %(datadir)s/weights.csv
-labels =
+
+# sample annotations; leave undefined if not available
+labels = %(datadir)s/sample_info.csv
 
 [refs]
 
