--- a/settings-example.conf
+++ b/settings-example.conf
@@ -8,11 +8,11 @@ refdir = %(bvdiversity)s/ncbi-plus/output-2017-10-23
 
 [singularity]
 
-singularity = /app/singularity/2.3.1.1/bin/singularity
-# singularity = /app/easybuild/software/Singularity/2.4.2-GCC-5.4.0-2.26/bin/singularity
+# singularity = /app/singularity/2.3.1.1/bin/singularity
+singularity = /app/easybuild/software/Singularity/2.4.2-GCC-5.4.0-2.26/bin/singularity
 
 _images = %(bvdiversity)s/singularity
-deenurp = %(_images)s/deenurp-v0.2.3-singularity2.3.img
+deenurp = %(_images)s/deenurp-v0.2.4-singularity2.4.img
 dada2 = %(_images)s/dada2-1.4.1c.img
 
 # one path per line
