--- a/settings-example.conf
+++ b/settings-example.conf
@@ -13,7 +13,7 @@ singularity = /app/easybuild/software/Singularity/2.4.2-GCC-5.4.0-2.26/bin/singu
 
 _images = %(bvdiversity)s/singularity
 deenurp = %(_images)s/deenurp-v0.2.4-singularity2.4.img
-dada2 = %(_images)s/dada2-1.4.1c.img
+dada2 = %(_images)s/dada2-1.6.0-singularity2.4-dist.img
 
 # one path per line
 binds:
