provide taxdb in settings

--- a/settings-example.conf
+++ b/settings-example.conf
@@ -49,6 +49,17 @@ weights = %(datadir)s/weights.csv
 # sample annotations; leave undefined if not available
 labels = %(datadir)s/sample_info.csv
 
+# an optional excel file with a single column specifying tax_names to remove
+# to_remove = data/
+
+# an optional excel file with columns [tax_name rank sv new_tax_name new_rank]
+# to_rename = data/
+
+# taxonomy database; required if to_rename is provided
+# taxdb = %(refdir)s/ncbi_plus_taxonomy.db
+
+min_reads = 25
+
 [refs]
 
 # 16S database for vsearch of centroids
