--- a/settings.conf
+++ b/settings.conf
@@ -4,7 +4,7 @@ virtualenv =
 use_cluster =
 bvdiversity = /fh/fast/fredricks_d/bvdiversity
 
-refdir = %(bvdiversity)s/ncbi-plus/output-2017-10-23
+refdir = %(bvdiversity)s/ncbi-plus/output-2018-04-05
 
 [singularity]
 
@@ -54,13 +54,13 @@ weights = %(datadir)s/weights.csv
 labels = %(datadir)s/sample_info.csv
 
 # an optional excel file with a single column specifying tax_names to remove
-# to_remove = data/
+to_remove = data/manhart-remove-2018-07-19.xlsx
 
 # an optional excel file with columns [tax_name rank sv new_tax_name new_rank]
-# to_rename = data/
+to_rename = data/manhart-rename-2018-08-10.xlsx
 
 # taxonomy database; required if to_rename is provided
-# taxdb = %(refdir)s/ncbi_plus_taxonomy.db
+taxdb = %(refdir)s/ncbi_plus_taxonomy.db
 
 min_reads = 25
 
