don't specify full path to singularity

--- a/settings-example.conf
+++ b/settings-example.conf
@@ -8,7 +8,7 @@ refdir = %(bvdiversity)s/ncbi-plus/output-2017-10-23
 
 [singularity]
 
-singularity = /app/easybuild/software/Singularity/2.5.2-GCC-5.4.0-2.26/bin/singularity
+singularity = singularity
 
 _images = %(bvdiversity)s/singularity
 deenurp = %(_images)s/deenurp-v0.2.4-singularity2.4.img
