--- a/settings-example.conf
+++ b/settings-example.conf
@@ -11,8 +11,9 @@ refdir = %(bvdiversity)s/ncbi-plus/output-2017-10-23
 singularity = singularity
 
 _images = %(bvdiversity)s/singularity
-deenurp = %(_images)s/deenurp-v0.2.4-singularity2.4.img
-dada2 = %(_images)s/dada2-1.10-singularity2.4-dist.simg
+deenurp = %(_images)s/deenurp-0.3.0.sif
+dada2 = %(_images)s/dada2-nf-v1.15.1-8-g12f59b0.sif
+yapp = %(_images)/yapp.sif
 
 # one path per line
 binds:
