use csvkit docker image for csvsql

--- a/settings-example.conf
+++ b/settings-example.conf
@@ -13,7 +13,7 @@ singularity = singularity
 _images = %(bvdiversity)s/singularity
 deenurp = %(_images)s/deenurp-0.3.0.sif
 dada2 = %(_images)s/dada2-nf-v1.15.1-8-g12f59b0.sif
-yapp = %(_images)/yapp.sif
+csvkit = docker://jdkelley/csvkit
 
 # one path per line
 binds:
