--- a/settings-example.conf
+++ b/settings-example.conf
@@ -14,6 +14,7 @@ _images = %(bvdiversity)s/singularity
 deenurp = %(_images)s/deenurp-0.3.0.sif
 dada2 = %(_images)s/dada2-nf-v1.15.1-8-g12f59b0.sif
 csvkit = docker://jdkelley/csvkit
+yapp = docker://ghcr.io/fhcrc/yapp:latest
 
 # one path per line
 binds:
