Fixed aws batch memory error running cmalign

--- a/nextflow.config
+++ b/nextflow.config
@@ -2,30 +2,58 @@ nextflow.enable.dsl = 2
 
 profiles {
     standard {
-        workDir = 'work/'
+        workDir = "work/"
         resume = true  // null for no resume
         singularity {
             enabled = true
             autoMounts = true
-            cacheDir = 'singularity/'
+            cacheDir = "singularity/"
         }
         docker {
             enabled = false
         }
         params {
-            output = 'output-nf'
+            output = "output-nf"
         }
         process {
-            executor = 'local'
+            executor = "local"
         }
         withLabel: c5d_2xlarge {
             // Meant to match the AWS Batch cd5.9xlarge which has 32 cpus. For
             // local execution cpus must be configured at the application and
             // no more than 2 forks at a time.
             maxForks = 2
+            memory = "16.GB"
         }
         executor{
             queueSize = 16
         }
+    }
+    uw_batch {
+        workDir = "s3://molmicro-data/nextflow-workdir/yapp"
+        params {
+            output = "output-batch"
+        }
+        process {
+            scratch = "/docker_scratch"
+            queue = "molmicro-queue"
+            executor = "awsbatch"
+
+            // allocate resources according to labels; see
+            // https://www.nextflow.io/docs/latest/config.html#scope-process
+            // https://www.nextflow.io/docs/latest/process.html#label
+            // https://aws.amazon.com/ec2/instance-types/c5/
+            withLabel: c5d_4xlarge {
+                cpus = 16
+                memory = "32 GB"
+            }
+        }
+        aws {
+            region = "us-west-2"
+            batch {
+                volumes = "/docker_scratch"
+                cliPath = "/home/ec2-user/miniconda/bin/aws"
+        }
+      }
     }
 }
