setting standard memory to 32GB

--- a/nextflow.config
+++ b/nextflow.config
@@ -23,7 +23,7 @@ profiles {
             // local execution cpus must be configured at the application and
             // no more than 2 forks at a time.
             maxForks = 2
-            memory = "16.GB"
+            memory = "32 GB"
         }
         executor{
             queueSize = 16
