fixed cmalign label

--- a/nextflow.config
+++ b/nextflow.config
@@ -18,10 +18,10 @@ profiles {
         process {
             executor = "local"
         }
-        withLabel: c5d_2xlarge {
-            // Meant to match the AWS Batch cd5.9xlarge which has 32 cpus. For
-            // local execution cpus must be configured at the application and
-            // no more than 2 forks at a time.
+        withLabel: c5d_4xlarge {
+            // Meant to match the AWS Batch cd5.4xlarge which has 16 cpus and 
+            // 32 GIB mem. For local execution cpus must be configured at the 
+            // application and no more than 2 forks at a time.
             maxForks = 2
             memory = "32 GB"
         }
