Updating image environment and GHA workflow for pushing to ghcr.io

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,21 +1,23 @@
 nextflow.enable.dsl = 2
 
+params {
+    // container = "ghcr.io/nhoffman/yapp:0.1"
+    container = "yapp:latest"
+}
+
 profiles {
     standard {
         workDir = "work/"
         resume = true  // null for no resume
         singularity {
-            enabled = true
             autoMounts = true
             cacheDir = "singularity/"
-        }
-        docker {
-            enabled = false
         }
         params {
             output = "output-nf"
         }
         process {
+            container = params.container
             executor = "local"
         }
         withLabel: c5d_4xlarge {
@@ -35,6 +37,7 @@ profiles {
             output = "output-batch"
         }
         process {
+            container = params.container
             scratch = "/docker_scratch"
             queue = "molmicro-queue"
             executor = "awsbatch"
