--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,10 +3,8 @@ name: Build environment image and push to registry
 
 on:
   push:
-    branches:
-      - $default-branch
-    tags: 
-      - '*.*'
+    branches: [ $default-branch ]
+    tags: [ '*.*' ]
 
 env:
   REGISTRY: ghcr.io
