Trigger on push to "master"

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ name: Build environment image and push to registry
 
 on:
   push:
-    branches: [ $default-branch ]
+    branches: [ 'master' ]
     tags: [ '*.*' ]
 
 env:
