use ghcr.io image

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,8 +1,7 @@
 nextflow.enable.dsl = 2
 
 params {
-    // container = "ghcr.io/nhoffman/yapp:0.1"
-    container = "yapp:latest"
+    container = "ghcr.io/fhcrc/yapp:latest"
 }
 
 profiles {
