use local image for dev

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,7 +1,8 @@
 nextflow.enable.dsl = 2
 
 params {
-    container = "ghcr.io/fhcrc/yapp:latest"
+    container = "yapp:latest"
+    // container = "ghcr.io/fhcrc/yapp:latest"
 }
 
 profiles {
