Use latest image from ghcr.io

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,8 +1,7 @@
 nextflow.enable.dsl = 2
 
 params {
-    container = "yapp:latest"
-    // container = "ghcr.io/fhcrc/yapp:latest"
+    container = "ghcr.io/fhcrc/yapp:latest"
 }
 
 profiles {
