--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,12 +3,8 @@ name: Build environment image and push to registry
 
 on:
   push:
-    branches:
-      - $default-branch
-    paths:
-      - 'Dockerfile'
-    tags: 
-      - '*.*'
+    branches: [ 'master' ]
+    tags: [ '*.*' ]
 
 env:
   REGISTRY: ghcr.io
