Updated some images and added an ENV section

--- a/settings-example.conf
+++ b/settings-example.conf
@@ -10,10 +10,10 @@ refdir = %(bvdiversity)s/ncbi-plus/output-2017-10-23
 
 singularity = singularity
 
-_images = %(bvdiversity)s/singularity
-deenurp = %(_images)s/deenurp-0.3.0.sif
-dada2 = %(_images)s/dada2-nf-v1.15.1-8-g12f59b0.sif
-csvkit = docker://jdkelley/csvkit
+# _images = %(bvdiversity)s/singularity
+deenurp = docker://ghcr.io/fhcrc/deenurp:v0.3.2
+dada2 = docker://ghcr.io/nhoffman/dada2-nf:2.0.3
+csvkit = docker://wireservice/csvkit:latest
 yapp = docker://ghcr.io/fhcrc/yapp:latest
 
 # one path per line
@@ -77,3 +77,10 @@ outdir = output
 [details]
 
 outdir = output-details
+
+[ENV]
+
+# APPTAINER_CACHEDIR=
+# APPTAINER_TMPDIR=
+
+# SLURM_ACCOUNT=
