added links to human and mouse refsets

--- a/settings-example.conf
+++ b/settings-example.conf
@@ -34,7 +34,12 @@ plates:
 projects:
 
 # SConstruct-get-data makes a local copy of this refpkg
+# vaginal
 refpkg = %(bvdiversity)s/2017-07-03-vaginal-refset-ncbi-plus/output/urogenital-2017-10-23/urogenital-2017-10-23_named-1.0.refpkg
+# human
+# refpkg = %(bvdiversity)s/project-gut-17--84/mkrefpkg/output/gut-2020-09-10/
+# mouse
+# refpkg = %(bvdiversity)s/project-motoko-42-74/mkrefpkg/output/motoko-2019-10-28/motoko-2019-10-28-1.0.refpkg
 
 [input]
 
